Give me time to really focus on fixing this code. currently stuck

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,25 @@ body {
   font size: 20pt;
 }
 
-h1 {text-align: center;}
-h2 {text-align: center;}
-h4 {text-align: center;}
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+h4 {text-align: center;
+}
 
 p {
   text-indent: 50px;
+}
+
+.btn {
+  display: block;
+}
+
+#quote {
+  display: none;
 }
